--- a/src/App.css
+++ b/src/App.css
@@ -32,11 +32,26 @@
     font-size: 20px; 
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.NavbarList {
+    display: none;
+}
+
+.NavbarEntry:hover {
+    border-style: solid;
+}
+
+.Sidebar {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+}
+
+.Logo:hover + .NavbarList,
+.NavbarList:hover {
+    display: flex;
+    flex-direction: column;
+}
+
+.Logo {
+    font-size: 50px;
 }
