Added transition to pullout menu

--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,11 @@
 }
 
 .NavbarList {
-    display: none;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    width: 0;
+    transition: width 2s;
 }
 
 .NavbarEntry:hover {
@@ -49,6 +53,9 @@
 .NavbarListClicked {
     display: flex;
     flex-direction: column;
+    overflow: hidden;
+    width: 200px;
+    transition: width 2s;
 }
 
 .SidebarIcon {
