Fixed unnecessary text coloring on ashland card

--- a/src/buildings.css
+++ b/src/buildings.css
@@ -2,6 +2,11 @@
     display: grid; 
 }
 
+.RemoveDecoration {
+    text-decoration: none;
+    color: black;
+}
+
 .AshlandCard {
     border-style: solid;
     border-color: gray;
