--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@
     flex-direction: column;
     overflow: hidden;
     width: 0;
-    transition: width 1s ease-out;
+    transition: width .6s ease-out;
 }
 
 .NavbarEntry {
@@ -62,8 +62,8 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
-    width: 200px;
-    transition: width 1s ease-out;
+    width: 140px;
+    transition: width .6s ease-out;
 }
 
 .SidebarIcon {
@@ -104,8 +104,8 @@
 .OverlayShadow {
     height: 100vh;
     width: 100vw;
-    background-color: rgba(0, 0, 0, 0.5);
     position: absolute;
     left: 0;
-    transition: left 1s ease-in;
+    transition: left .6s ease-in;
+    transition: background-color .6s ease-in;
 }
