--- a/src/buildings.css
+++ b/src/buildings.css
@@ -43,7 +43,7 @@
 }
 
 .FloorsCards {
-    margin: 0 50px;
+    margin: 0 50px 0 0;
 }
 
 .LocalArea {
@@ -93,4 +93,57 @@
 .Units {
     border-top-style: solid;    
     margin: 50px 200px 0px 200px;
+}
+
+.UnitCard {
+    position: relative;
+    border-style: solid;
+    border-color: gray;
+    border-radius: 20px;
+    max-width: 300px;
+    z-index: 100;
+}
+
+.UnitImage {
+    height: 40vh;
+    object-fit: contain;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    border-bottom-style: solid;
+    border-bottom-color: gray;
+}
+
+.UnitDesc {
+    overflow-wrap: break-word;
+}
+
+.UnitCard:hover {
+    border-color: black;
+}
+
+.UnitCard:hover > .UnitImage {
+    border-bottom-color: black;
+}
+
+.UnitTitle {
+    font-size: 25px;
+    font-weight: 700;
+}
+
+.CardFloor {
+    display: flex;
+    flex-direction: row;
+}
+
+.FloorNumber {
+    font-size: 40px;
+    position: relative;
+    border-style: solid;
+    border-color: gray;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    left: 70px;
+    bottom: 90px;
+    transform: rotate(-90deg);
+    margin: auto 0;
 }
