Moved floor numbers to top for readability

--- a/src/buildings.css
+++ b/src/buildings.css
@@ -10,7 +10,7 @@
 .AshlandCard {
     border-style: solid;
     border-color: gray;
-    margin: 0 auto;
+    margin: 0;
     border-radius: 20px;
     max-width: 300px;
 }
@@ -40,10 +40,6 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-}
-
-.FloorsCards {
-    margin: 0 50px 0 0;
 }
 
 .LocalArea {
@@ -92,7 +88,7 @@
 
 .Units {
     border-top-style: solid;    
-    margin: 50px 200px 0px 200px;
+    margin: 0px 200px 0px 200px;
 }
 
 .UnitCard {
@@ -132,18 +128,22 @@
 
 .CardFloor {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    align-self: flex-start;
+    margin: 0 50px;
 }
 
 .FloorNumber {
-    font-size: 40px;
-    position: relative;
+    font-size: 30px;
     border-style: solid;
     border-color: gray;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
-    left: 70px;
-    bottom: 90px;
-    transform: rotate(-90deg);
-    margin: auto 0;
+    max-width: 250px;
+    width: min-content;
+    white-space: nowrap; 
+    margin: 0;
+    position: relative;
+    left: 20px;
+    top: 5px;
 }
