--- a/src/App.css
+++ b/src/App.css
@@ -107,7 +107,7 @@
     flex-grow: 1;
     min-height: 100vh;
     width: 100vw;
-    position: absolute;
+    position: fixed;
     left: 0;
     transition: left .6s ease-in;
     transition: background-color .6s ease-in;
